# flask-with-sqlalchemy

./: .gitignore  Makefile  postman.json  pyproject.toml
flask-with-sqlalchemy/: app.py
flask_with_sqlalchemy/: app.py  models.py
tests/: test_api.py
