[tool.poetry]
name = "flask-with-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Anderson Carlos Woss <anderson.woss@madeiramadeira.com.br>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
gunicorn = "^20.0.4"
flask-sqlalchemy = "^2.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
